ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DoctorCare</title>
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./style.css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-b">
                     <img 
-                        src="assets/mulher-negra-moletom-verde-sorrindo.png" 
+                        src="./assets/mulher-negra-moletom-verde-sorrindo.png" 
                         alt="Mulher negra vestindo moletom verde e sorrindo" />
                 </div>
                     <div class="stats">
@@ -233,7 +233,7 @@
                     </div>
                 </div>
                 <div class="col-b">
-                    <img src="assets/doutor-feliz-segurando-prancheta-com-pacientes.png" alt="doutor feliz segurando prancheta com pacientes" />
+                    <img src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png" alt="doutor feliz segurando prancheta com pacientes" />
                 </div>
             </div>
 
@@ -266,7 +266,7 @@
                     </div>
                 </div>
                 <div class="col-b">
-                    <img src="assets/homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="homem negro com moletom bege mexendo no celular" />
+                    <img src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png" alt="homem negro com moletom bege mexendo no celular" />
                 </div>
             </div>
         </section>
@@ -339,7 +339,7 @@
         </a>
 
         <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="main.js"></script>
+        <script src="./main.js"></script>
 
     </body>
 </html>
